cmake_minimum_required(VERSION 4.1)
project(Practica_terminada_Matias_Cardona_Acosta_y_Simon_Madrid_Norena)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Practica_terminada_Matias_Cardona_Acosta_y_Simon_Madrid_Norena
        avl.h
        heapsort.h
        main.cpp
        quicksort.h)
